--- a/demo/index.html
+++ b/demo/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Rollup | CoCreateJS</title>
+	<head>
+		<title>Rollup | CoCreateJS</title>
 
-        <!-- CoCreate Favicon -->
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="../assets/favicon.ico" />
-    </head>
-    <body>
-        <form>
-            <textarea rollup="message"></textarea>
-            <button actions="Rollup, reset">click</button>
-        </form>
+		<!-- CoCreate Favicon -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="../assets/favicon.ico" />
+	</head>
+	<body>
+		<form>
+			<textarea rollup="message"></textarea>
+			<button actions="Rollup, reset">click</button>
+		</form>
 
-        <!-- <div
+		<!-- <div
             array="users"
             array="interviews"
             object
             filter-sort-key="name"
             filter-sort-direction="asc"
-            render-selector="[template]">
+            render-query="[template]">
             <div
                 class="border-bottom:1px_solid_darkgray"
                 template
@@ -32,7 +32,7 @@
             </div>
         </div> -->
 
-        <!-- <script src="../src/CoCreate-rollup.js"></script> -->
-        <script src="./dist/CoCreate.js"></script>
-    </body>
+		<!-- <script src="../src/CoCreate-rollup.js"></script> -->
+		<script src="./dist/CoCreate.js"></script>
+	</body>
 </html>
